--- a/static/styles/less/header.less
+++ b/static/styles/less/header.less
@@ -133,6 +133,7 @@
 
 #header-search {
 	grid-area: search;
+	min-height: 64px; // Чтобы при пропадании логотипа в мобильной версии не менялся размер
 	
 	#navbar-search-input {
 		padding-top: 0;
